@@ -6,6 +6,9 @@ Versin 1.16-20 (opened June 17, 2009)
 
 	* new version opened concurrently with the release of vegan 1.15-3
 	on June 17, 2009.
+
+	* rrarefy: a new function to generate randomly rarefied
+	communities. 
 	
 Version 1.16-19 (closed June 17, 2009)
 
